# snip-rs

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh
.github/workflows/: ci.yml
.sqlx/: query-01026244ac3aba8329d88a44ae6334439556d1e3f7de3433d03d1eb9b2093c0b.json  query-cc665a1a1c330cb9c5bbd96a60a712328db71e187a5a84a7a9cb540d8ba57acd.json  query-ff62ac0f53298715de77282a10769086c119f4dbfe1eb095ade93373bacd76c0.json
migrations/: 20260530_create_urls_table.sql  20260608_add_expiration_date_for_urls.sql  20260614_add_analytics_table.sql  20260627_change_id_type_for_short_links.sql
src/: circuit_breaker.rs  consistent_hashing.rs  db.rs  encode.rs  error.rs  main.rs  models.rs  openapi.rs  ratelimit.rs  receiver.rs  redis.rs  snowflake.rs  state.rs
src/routes/: mod.rs  urls.rs
