[package]
name = "snip-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
chrono = "0.4.45"
dotenvy = "0.15.7"
fred = "10.1.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "time"] }
time = "0.3.47"
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
utoipa = { version = "5.5.0", features = ["macros"] }
utoipa-swagger-ui = "9.0.2"
